Fixed a bug about search modal and menudropdown. Search modal didnt get a fixed position with responsive fixed navbar so I changed the logic on how to get the classnames based on width. And menudropdown will close on each category click. Also added extra animation on mobile screens.

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@ code {
     margin-left: 88.4px !important;
 }
 
+.fixed {
+    position: fixed !important;
+    z-index: 7 !important;
+}
+
 .modal {
     max-width: calc(0.83 * 1040px) !important;
     width: calc(0.84 * 1040px) !important;
@@ -107,6 +112,15 @@ code {
 @keyframes fade {
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateX(-20deg);
+    }
+    100% {
+        transform: rotateX(0deg);
     }
 }
 
